CSS: Fix overlapping search bar, when mobile menu is collapsed
refs #3081

--- a/public/css/icinga/responsive.less
+++ b/public/css/icinga/responsive.less
@@ -72,6 +72,11 @@
     padding-bottom: 2.5em;
     width: 100%;
     z-index: 3;
+    overflow: hidden;
+
+    &.expanded {
+      overflow: auto;
+    }
   }
 
   .dashboard > div.container {
